--- a/index.html
+++ b/index.html
@@ -62,11 +62,11 @@
 			</div>
 
 			<div class="row tabsbtn  justify-content-center">
-				<div class="col-lg-7 col-sm-12 py-2   ">
-					<button class="btn btntab">Machine Learnin</button>
+				<div class="d-flex justify-content-center col-lg-7 col-sm-12 py-2  ">
+					<button class="btn btntab" checked>All</button>
 					<button class="btn btntab">School Projects</button>
-					<button class="btn btntab">Web Dev/Apps</button>
-					<button class="btn btntab" >All</button>
+					<button class="btn btntab">Games</button>
+					
 
 				</div>
 			</div>
