--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 					</div>
 				</div>
 				<div class="col-lg-7 col-sm-12 ">
-					<img src="images/banner2.png" class="intro-img">
+					<img src="https://avatars.githubusercontent.com/u/205423125?v=4" class="intro-img">
 				</div>
 			</div>
 			<div id="work" class="row skills-section flex-column justify-content-center">
