--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
 	<title></title>
 	<link rel="stylesheet" type="" href="fontawesome-free-6.6.0-web\css\all.min.css">
 	<link rel="stylesheet" type="text/css" href="\bootstrap-5.3.6-dist\css\bootstrap.min.css">
+	<!-- Bootstrap 5 CSS -->
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+	<!-- Font Awesome 6 -->
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+
 	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
