fixing img links

--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
 <body>
 	
 
-	<div class="container-fluid" id="home" style="background: url('images/bannerbg.png'); padding-bottom: 100px;">
+	<div class="container-fluid" id="home" style="background: url('https://raw.githubusercontent.com/M-Adil-code/Personal-Portfolio/refs/heads/main/Images//bannerbg.png'); padding-bottom: 100px;">
 		<header class="" >
 			
-			<img class="mainicon" src="images/logo.png" height="70">
+			<img class="mainicon" src="https://raw.githubusercontent.com/M-Adil-code/Personal-Portfolio/refs/heads/main/Images/logo.png" height="70">
 			<div class="nav-bg ">
 				<span class="cross d-md-none">&#10006;</span>
 				<ul class="nav">
@@ -56,7 +56,7 @@
 					</div>
 				</div>
 				<div class="col-lg-7 col-sm-12 ">
-					<img src="images/banner2.jpeg" class="intro-img">
+					<img src="https://raw.githubusercontent.com/M-Adil-code/Personal-Portfolio/refs/heads/main/Images/banner2.jpeg" class="intro-img">
 				</div>
 			</div>
 			<div id="work" class="row skills-section flex-column justify-content-center">
@@ -83,7 +83,7 @@
 									<a href="https://github.com/M-Adil-code/To-Do-List-App"><i class="icons fa-brands fa-github"></i></a>
 									<a href="https://m-adil-code.github.io/To-Do-List-App/"><i class="icons fa-regular fa-eye"></i></a>
 								</div>
-								<img src="images/todoapp.png" class="w-100">
+								<img src="https://raw.githubusercontent.com/M-Adil-code/Personal-Portfolio/refs/heads/main/Images/todoapp.png" class="w-100">
 							</div>
 					<div class="card-body">
 						<div class="card-title">
@@ -102,7 +102,7 @@
 									<a target="blank" href="https://github.com/M-Adil-code/Weather-App"><i class="icons fa-brands fa-github"></i></a>
 									<a target="_blank" href="https://m-adil-code.github.io/Weather-App/"><i class="icons fa-regular fa-eye"></i></a>
 								</div>
-								<img src="images/weather3.png" class="w-100">
+								<img src="https://raw.githubusercontent.com/M-Adil-code/Personal-Portfolio/refs/heads/main/Images/weather3.png" class="w-100">
 							</div>
 					<div class="card-body">
 						<div class="card-title">
@@ -121,7 +121,7 @@
 									<a href="https://github.com/M-Adil-code/Rock-Paper-Game"><i class="icons fa-brands fa-github"></i></a>
 									<a href="https://m-adil-code.github.io/Rock-Paper-Game/"><i class="icons fa-regular fa-eye"></i></a>
 								</div>
-								<img src="images/RPSGame.png" class="w-100">
+								<img src="https://raw.githubusercontent.com/M-Adil-code/Personal-Portfolio/refs/heads/main/Images/RPSGame.png" class="w-100">
 							</div>
 					<div class="card-body">
 						<div class="card-title">
@@ -151,10 +151,10 @@
 			<div class="row">
 				<div class="col p-5">
 					<div class="img-section">
-						<span><img src="images/html.png"></span>
-						<span><img src="images/css.webp"></span>
-						<span><img src="images/js.png"></span>
-						<span><img src="images/bootstrap.webp"></span>
+						<span><img src="https://raw.githubusercontent.com/M-Adil-code/Personal-Portfolio/refs/heads/main/Images/html.png"></span>
+						<span><img src="https://raw.githubusercontent.com/M-Adil-code/Personal-Portfolio/refs/heads/main/Images/css.webp"></span>
+						<span><img src="https://raw.githubusercontent.com/M-Adil-code/Personal-Portfolio/refs/heads/main/Images/js.png"></span>
+						<span><img src="https://raw.githubusercontent.com/M-Adil-code/Personal-Portfolio/refs/heads/main/Images/bootstrap.webp"></span>
 					</div>
 				</div>
 				
@@ -166,7 +166,7 @@
 			<div  id="about" class="Hobbies row flex-wrap">
 				<div class="card">
 					<div class="card-img-top">
-						<img src="images/demonslayer.webp" width="100%">
+						<img src="https://raw.githubusercontent.com/M-Adil-code/Personal-Portfolio/refs/heads/main/Images/demonslayer.webp" width="100%">
 					</div>
 					<div class="card-body">
 						<div class="card-title"><h3 class="text-center">Anime</h3></div>
@@ -177,7 +177,7 @@
 				</div>
 				<div class="card">
 					<div class="card-img-top">
-						<img src="images/project1.png" width="100%">
+						<img src="https://raw.githubusercontent.com/M-Adil-code/Personal-Portfolio/refs/heads/main/Images/project1.png" width="100%">
 					</div>
 					<div class="card-body">
 						<div class="card-title"><h3 class="text-center">Anime</h3></div>
@@ -188,7 +188,7 @@
 				</div>
 				<div class="card">
 					<div class="card-img-top">
-						<img src="images/project1.png" width="100%">
+						<img src="https://raw.githubusercontent.com/M-Adil-code/Personal-Portfolio/refs/heads/main/Images/project1.png" width="100%">
 					</div>
 					<div class="card-body">
 						<div class="card-title"><h3 class="text-center">Anime</h3></div>
@@ -199,7 +199,7 @@
 				</div>
 				<div class="card">
 					<div class="card-img-top">
-						<img src="images/project1.png" width="100%">
+						<img src="https://raw.githubusercontent.com/M-Adil-code/Personal-Portfolio/refs/heads/main/Images/project1.png" width="100%">
 					</div>
 					<div class="card-body">
 						<div class="card-title"><h3 class="text-center">Anime</h3></div>
@@ -215,11 +215,11 @@
 					<h2 class="text-center my-5">Contact me!</h2>
 					<span>
 						<div style="    background-color: rgb(242, 247, 251);" class="contact-card d-flex  gap-3 my-5">
-						<img src="images/mobile.png" height="50">
+						<img src="https://raw.githubusercontent.com/M-Adil-code/Personal-Portfolio/refs/heads/main/Images/mobile.png" height="50">
 						<a href="mailto:muhammadadeelkhan29@gmail.com" >muhammadadeelkhan29@gmail.com</a>
 						</div><br>
 						<div style=" background-color: rgb(254, 244, 245);" class="contact-card d-flex gap-3 mb-5">
-							<img src="images/email.png" height="50">
+							<img src="https://raw.githubusercontent.com/M-Adil-code/Personal-Portfolio/refs/heads/main/Images/email.png" height="50">
 							<a href="tel: +1 (92) 315-4360812" >+1 (92) 315-4360812</a>
 						</div>
 					</span>
